--- a/munit_config/config.yaml
+++ b/munit_config/config.yaml
@@ -20,7 +20,9 @@ lr_policy: step               # learning rate scheduler
 step_size: 100000             # how often to decay learning rate
 gamma: 0.5                    # how much to decay learning rate
 gan_w: 1                      # weight of adversarial loss
-recon_x_w: 10                 # weight of image reconstruction loss
+recon_x_w : 1
+recon_kl_w : 1
+recon_kl_cyc_w : 1
 recon_s_w: 1                  # weight of style reconstruction loss
 recon_c_w: 1                  # weight of content reconstruction loss
 recon_x_cyc_w: 0              # weight of explicit style augmented cycle consistency loss
